--- a/categorias.html
+++ b/categorias.html
@@ -151,8 +151,8 @@
         <img src="god of.jpg" alt="God of War Ragnarok" />
         <div class="card-title"><a href="#">Dios de la guerra Ragnarok</a></div>
       </div>
-      <div class="card" data-name="Call of Duty" data-desc="Entra en la acción bélica de Call of Duty." data-img="llamada.WEBP">
-        <img src="llamada.WEBP" alt="Call of Duty" />
+      <div class="card" data-name="Call of Duty" data-desc="Entra en la acción bélica de Call of Duty." data-img="call.jpg">
+        <img src="call.jpg" alt="Call of Duty" />
         <div class="card-title"><a href="#">Call of Duty</a></div>
       </div>
     </div>
@@ -162,8 +162,8 @@
   <div class="section">
     <h2>Juegos de Nintendo</h2>
     <div class="products">
-      <div class="card" data-name="Mario Kart" data-desc="Corre y compite en Mario Kart con tus personajes favoritos." data-img="kart.WEBP">
-        <img src="kart.WEBP" alt="Mario Kart" />
+      <div class="card" data-name="Mario Kart" data-desc="Corre y compite en Mario Kart con tus personajes favoritos." data-img="kart.jpg">
+        <img src="kart.jpg" alt="Mario Kart" />
         <div class="card-title"><a href="#">Mario Kart</a></div>
       </div>
       <div class="card" data-name="Kirby" data-desc="Explora mundos coloridos con Kirby." data-img="kirbi.jpg">
@@ -177,12 +177,12 @@
   <div class="section">
     <h2>Juegos de PC</h2>
     <div class="products">
-      <div class="card" data-name="Minecraft" data-desc="Construye y explora mundos infinitos en Minecraft." data-img="minecra.WEBP">
-        <img src="minecra.WEBP" alt="Minecraft" />
+      <div class="card" data-name="Minecraft" data-desc="Construye y explora mundos infinitos en Minecraft." data-img="minecra.jpg">
+        <img src="minecra.jpg" alt="Minecraft" />
         <div class="card-title"><a href="#">Minecraft</a></div>
       </div>
-      <div class="card" data-name="Superjuego" data-desc="Un juego increíble para PC." data-img="super.WEBP">
-        <img src="super.WEBP" alt="Superjuego" />
+      <div class="card" data-name="Superjuego" data-desc="Un juego increíble para PC." data-img="super.jpg">
+        <img src="super.jpg" alt="Superjuego" />
         <div class="card-title"><a href="#">Superjuego</a></div>
       </div>
     </div>
