--- a/masjug.html
+++ b/masjug.html
@@ -129,16 +129,16 @@
   <div class="section">
     <h2>Juegos mas jugados</h2>
     <div class="products">
-      <div class="card" data-name="fortnite" data-desc="Fortnite Battle Royale es un videojuego multiplataforma gratuito perteneciente al género battle royale desarrollado y publicado por Epic Games. " data-img="images.WEBP">
-        <img src="images.WEBP" alt="fortnite" />
+      <div class="card" data-name="fortnite" data-desc="Fortnite Battle Royale es un videojuego multiplataforma gratuito perteneciente al género battle royale desarrollado y publicado por Epic Games. " data-img="images.jpg">
+        <img src="images.jpg" alt="fortnite" />
         <div class="card-title"><a href="#">Fortnite</a></div>
       </div>
       <div class="card" data-name="league of legends" data-desc="League of Legends es un videojuego multijugador de arena de batalla en línea desarrollado y publicado por Riot Games. Inspirándose en Defense of the Ancients, un mapa personalizado para Warcraft III, los fundadores de Riot Games buscaron desarrollar un juego independiente del mismo género." data-img="lol.jpg">
         <img src="lol.jpg" alt="lol" />
         <div class="card-title"><a href="#">league of legends</a></div>
       </div>
-      <div class="card" data-name="GTA5" data-desc="Grand Theft Auto V es un videojuego de acción-aventura de mundo abierto desarrollado por Rockstar North y publicado por Rockstar Games. Este título revolucionario hizo su debut el 17 de septiembre de 2013 en las consolas Xbox 360 y PlayStation 3" data-img="vt5.WEBP">
-        <img src="vt5.WEBP" alt="GT5" />
+      <div class="card" data-name="GTA5" data-desc="Grand Theft Auto V es un videojuego de acción-aventura de mundo abierto desarrollado por Rockstar North y publicado por Rockstar Games. Este título revolucionario hizo su debut el 17 de septiembre de 2013 en las consolas Xbox 360 y PlayStation 3" data-img="vt5.jpg">
+        <img src="vt5.jpg" alt="GT5" />
         <div class="card-title"><a href="#">GTA5</a></div>
       </div>
       <div class="card" data-name="Monster Hunter Wilds" data-desc="Monster Hunter Wilds es un videojuego de rol de acción desarrollado y distribuido por Capcom. Es parte de la franquicia Monster Hunter y sucesor de Monster Hunter Rise. Fue lanzado el 28 de febrero de 2025 en PlayStation 5, Xbox Series X/S y Windows.." data-img="lolo.jpg">
