--- a/minecarft.html
+++ b/minecarft.html
@@ -37,7 +37,7 @@
 <body>
 
   <h1 id="tituloJuego">minecraft</h1>
-  <img id="imagenJuego" src="minecra.WEBP" alt="Juego">
+  <img id="imagenJuego" src="minecra.jpg" alt="Juego">
   <p id="descripcionJuego">
     un juego donde expandes tu cratividad y te diviertes construyendo todo lo que tu mente pueda crear. 
     también un modo supervivencia donde tienes que sobrevivir día y noche hasta completar y terminar con la vida del ender dragon.
