--- a/categorias.html
+++ b/categorias.html
@@ -132,8 +132,8 @@
   <div class="section">
     <h2>Juegos de Xbox</h2>
     <div class="products">
-      <div class="card" data-name="Halo 5" data-desc="Disfruta de la épica batalla espacial en Halo 5 Guardians." data-img="halo.JPG">
-        <img src="halo.JPG" alt="Halo 5" />
+      <div class="card" data-name="Halo 5" data-desc="Disfruta de la épica batalla espacial en Halo 5 Guardians." data-img="halo.jpg">
+        <img src="halo.jpg" alt="Halo 5" />
         <div class="card-title"><a href="#">Halo 5</a></div>
       </div>
       <div class="card" data-name="Gears 5" data-desc="Sumérgete en la intensa acción de Gears 5." data-img="gea.jpg">
