--- a/juegos.html
+++ b/juegos.html
@@ -80,7 +80,7 @@
         <div class="card-title"><a href="halo2.html">Gears 5</a></div>
       </div>
       <div class="card">
-        <img src="minecra.WEBP" alt="Minecraft">
+        <img src="minecra.jpg" alt="Minecraft">
         <div class="card-title"><a href="halo2.html">Minecraft</a></div>
       </div>
     </div>
@@ -94,11 +94,11 @@
         <div class="card-title"><a href="halo2.html">God of War Ragnarok</a></div>
       </div>
       <div class="card">
-        <img src="call.WEBP" alt="Call of Duty">
+        <img src="call.jpg" alt="Call of Duty">
         <div class="card-title"><a href="halo2.html">Call of Duty</a></div>
       </div>
       <div class="card">
-        <img src="minecra.WEBP" alt="Minecraft">
+        <img src="minecra.jpg" alt="Minecraft">
         <div class="card-title"><a href="halo2.html">Minecraft</a></div>
       </div>
     </div>
@@ -108,11 +108,11 @@
     <h2>Juegos de Nintendo</h2>
     <div class="products">
       <div class="card">
-        <img src="kart.WEBP" alt="Mario Kart">
+        <img src="kart.jpg" alt="Mario Kart">
         <div class="card-title"><a href="halo2.html">Mario Kart</a></div>
       </div>
       <div class="card">
-        <img src="super.WEBP" alt="Smash Bros">
+        <img src="super.jpg" alt="Smash Bros">
         <div class="card-title"><a href="halo2.html">Smash Bros</a></div>
       </div>
       <div class="card">
