--- a/juegos.html
+++ b/juegos.html
@@ -80,7 +80,7 @@
         <div class="card-title"><a href="halo2.html">Gears 5</a></div>
       </div>
       <div class="card">
-        <img src="minecra.jpg" alt="Minecraft">
+        <img src="mine.jpg" alt="Minecraft">
         <div class="card-title"><a href="halo2.html">Minecraft</a></div>
       </div>
     </div>
@@ -98,7 +98,7 @@
         <div class="card-title"><a href="halo2.html">Call of Duty</a></div>
       </div>
       <div class="card">
-        <img src="minecra.jpg" alt="Minecraft">
+        <img src="mine.jpg" alt="Minecraft">
         <div class="card-title"><a href="halo2.html">Minecraft</a></div>
       </div>
     </div>
